Fix after mentor's comments